--- a/public/lib/css/excel.css
+++ b/public/lib/css/excel.css
@@ -77,31 +77,156 @@ body {
   max-height: 80px;
 }
 
-ol {
+#file-process-sequence {
+  width: 800px;
+  padding: 0;
+  list-style: none;
+}
+
+#file-process-sequence li {
+  position: relative;
+  height: 40px;
+  vertical-align: middle;
+  line-height: 25px;
+  background: linear-gradient(0deg, transparent 0, transparent 41px, red 56px, transparent 100%);
+  -webkit-box-shadow: inset 30px 0 20px #fff, inset -30px 0 20px #fff;
+          box-shadow: inset 30px 0 20px #fff, inset -30px 0 20px #fff;
+}
+
+#file-process-sequence li > span {
+  max-width: 100%;
+  min-width: calc(100% - 50px);
+  border: 2px solid blue;
+  position: absolute;
+  left: -1px;
+  top: -2px;
+  height: 25px;
+  padding: 5px 0 5px 40px;
+  border-radius: 20px;
+  background-color: #EEFFEE;
+}
+
+#file-process-sequence li > b {
+  line-height: 25px;
+  z-index: 10;
+  position: absolute;
+  background: white;
+  border: 2px solid blue;
+  width: 25px;
+  height: 25px;
+  top: 3px;
+  left: 5px;
+  border-radius: 50%;
+  text-align: center;
+}
+
+#file-process-sequence.drag-in-progress {
+  width: 800px;
+  padding: 0;
+  list-style: none;
+}
+
+#file-process-sequence.drag-in-progress span {
+  z-index: -100 !important;
+}
+
+#file-process-sequence.drag-in-progress li.initial.endex {
+  display: none;
+}
+
+#file-process-sequence.drag-in-progress li:not(.initial):not(.endex) {
+  color: pink;
+  margin-bottom: 12px;
+}
+
+#file-process-sequence.drag-in-progress li:not(.initial):not(.endex) .being-dragged-over, #file-process-sequence.drag-in-progress li:not(.initial):not(.endex) .being-dragged-over + li {
+  padding-top: 30px;
+  -webkit-transition: 0.15s all ease-in-out;
+  transition: 0.15s all ease-in-out;
+  background-color: red;
+}
+
+#file-process-sequence.drag-in-progress li:not(.initial):not(.endex) .being-dragged-over > span, #file-process-sequence.drag-in-progress li:not(.initial):not(.endex) .being-dragged-over + li > span {
+  max-width: 100%;
+  min-width: calc(100% - 50px);
+  border: 2px solid blue;
+  position: absolute;
+  left: -1px;
+  top: 30px;
+  height: 25px;
+  padding: 5px 0 5px 40px;
+  border-radius: 20px;
+  background-color: #EEFFEE;
+  -webkit-transition: 0.15s all ease-in-out;
+  transition: 0.15s all ease-in-out;
+}
+
+#file-process-sequence.drag-in-progress li:not(.initial):not(.endex) .being-dragged-over > b, #file-process-sequence.drag-in-progress li:not(.initial):not(.endex) .being-dragged-over + li > b {
+  line-height: 25px;
+  z-index: 10;
+  position: absolute;
+  background: white;
+  border: 2px solid blue;
+  width: 25px;
+  height: 25px;
+  top: 35px;
+  left: 5px;
+  border-radius: 50%;
+  text-align: center;
+  -webkit-transition: 0.15s all ease-in-out;
+  transition: 0.15s all ease-in-out;
+}
+
+#file-process-sequence.drag-in-progress li:not(.initial):not(.endex) .being-dragged-over {
+  background: linear-gradient(0deg, transparent 0, transparent 41px, red 56px, transparent 100%);
+  -webkit-box-shadow: inset 30px 0 20px #fff, inset -30px 0 20px #fff;
+          box-shadow: inset 30px 0 20px #fff, inset -30px 0 20px #fff;
+}
+
+#file-process-sequence.drag-in-progress li:not(.initial):not(.endex) .being-dragged-over + li {
+  background: linear-gradient(180deg, transparent 0px, transparent 0px, red 15px, transparent 30px, transparent 100%);
+  -webkit-box-shadow: inset 30px 0 20px #fff, inset -30px 0 20px #fff;
+          box-shadow: inset 30px 0 20px #fff, inset -30px 0 20px #fff;
+}
+
+#file-process-sequence.drag-in-progress li:not(.initial):not(.endex).endex * {
+  opacity: 0;
+}
+
+z
+ol.fuckyou {
   float: left;
   display: grid;
 }
 
-ol > li {
+z
+ol.fuckyou > li {
   display: block;
   width: auto;
-  height: 35px;
-  padding: 0;
+  height: 50px;
+  padding: 12px 165px 3px 0;
   line-height: 35px;
   position: relative;
   white-space: nowrap;
   width: 1fr;
+  background-color: pink;
+  width: 70vw;
+  border: 1px dotted indigo;
 }
 
-ol > li span {
+z
+ol.fuckyou > li span {
   position: absolute;
   padding: 0 20px;
   height: 35px;
   line-height: 35px;
   z-index: 2;
+  background-color: #EEEEEE;
+  min-width: 100%;
 }
 
-ol > li span::before {
+z
+ol.fuckyou > li span::before {
   display: inline-block;
   border: 1px solid black;
   border-radius: 40px;
@@ -117,7 +242,8 @@ ol > li span::before {
   color: #aaa;
 }
 
-ol > li span em {
+z
+ol.fuckyou > li span em {
   overflow: hidden;
   float: left;
   padding: 0;
@@ -127,8 +253,8 @@ ol > li span em {
   max-width: 0;
 }
 
-ol > li b {
-  /* padding: 0 165px 0 0; */
+z
+ol.fuckyou > li b {
   display: inline-block;
   width: 25px;
   height: 25px;
@@ -140,15 +266,119 @@ ol > li b {
   margin: 5px 0 0 20px;
 }
 
-ol > li.placeholder span {
+z
+ol.fuckyou > li.placeholder span {
   width: 100%;
 }
 
-ol.withDate li {
+z
+ol.fuckyou.withDate li {
   color: #666;
   white-space: nowrap;
 }
 
-ol.withDate li > span em {
+z
+ol.fuckyou.withDate li > span em {
+  padding: 0 150px 0 15px;
+}
+
+@-webkit-keyframes 'pulse' {
+  0 {
+    opacity: 0.5;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0.5;
+  }
+}
+
+@keyframes 'pulse' {
+  0 {
+    opacity: 0.5;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0.5;
+  }
+}
+
+ol.old {
+  float: left;
+  display: grid;
+}
+
+ol.old > li {
+  display: block;
+  width: auto;
+  height: 38px;
+  padding: 0 0 3px 0;
+  line-height: 35px;
+  position: relative;
+  white-space: nowrap;
+  width: 1fr;
+}
+
+ol.old > li span {
+  position: absolute;
+  padding: 0 20px;
+  height: 35px;
+  line-height: 35px;
+  z-index: 2;
+  background-color: #EEEEEE;
+  min-width: 100%;
+}
+
+ol.old > li span::before {
+  display: inline-block;
+  border: 1px solid black;
+  border-radius: 40px;
+  position: absolute;
+  content: '';
+  top: 0;
+  left: -30px;
+  width: calc(100% + 205px);
+  height: 35px;
+  font-size: 20px;
+  font-weight: bold;
+  line-height: 35px;
+  color: #aaa;
+}
+
+ol.old > li span em {
+  overflow: hidden;
+  float: left;
+  padding: 0;
+  -webkit-transition: 0.3s all ease-in-out;
+  transition: 0.3s all ease-in-out;
+  color: #000;
+  max-width: 0;
+}
+
+ol.old > li b {
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+  text-align: center;
+  background: #f00;
+  line-height: 25px;
+  border-radius: 50%;
+  vertical-align: bottom;
+  margin: 5px 0 0 20px;
+}
+
+ol.old > li.placeholder span {
+  width: 100%;
+}
+
+ol.old.withDate li {
+  color: #666;
+  white-space: nowrap;
+}
+
+ol.old.withDate li > span em {
   padding: 0 150px 0 15px;
 }
