--- a/_scss/excel.scss
+++ b/_scss/excel.scss
@@ -147,10 +147,10 @@ ol.fuckyou {
     }
 }
 
-@keyframes 'pulse' {
-    0 { opacity:0.5; }
-    50% { opacity:0; }
-    100% { opacity:0.5; }
+@keyframes pulse {
+    0%      { opacity: 0.5; }
+    50%     { opacity: 0; }
+    100%    { opacity: 0.5; }
 }
 
 ol.old { 
